Add DeleteArticle method
